<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:orientation="horizontal" >
    <TextView
        android:id="@+id/opponent_mh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_1"
        android:layout_weight="1"
        android:textAppearance="?android:attr/textAppearanceSmall" />
        <!--android:textColor="#000000"-->
    <TextView
        android:id="@+id/difficulty_mh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/placeholder_2"
        android:textAppearance="?android:attr/textAppearanceSmall" />
        <!--android:textColor="#000000"-->
    <TextView
        android:id="@+id/matchTime_mh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/placeholder_3"
        android:textAppearance="?android:attr/textAppearanceSmall" />
        <!--android:textColor="#000000"-->
    <TextView
        android:id="@+id/winner_mh"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/placeholder_4"
        android:textAppearance="?android:attr/textAppearanceSmall" />
        <!--android:textColor="#000000"-->
</LinearLayout>